Fix content image margin on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -110,10 +110,6 @@ i {
   object-fit: cover;
 }
 
-.page-content img {
-  margin: 0 0.5em;
-}
-
 @media (max-width: 575px) {
   .page-content img {
     float: none !important;
@@ -127,6 +123,7 @@ i {
     max-width: 400px;
     max-height: 300px;
     object-fit: cover;
+    margin: 0 0.5em;
   }
 }
 
